lib/bait/tests/inout/op_overload.out
lib/bait/checker/tests/op_overload.in.bt:1:9 warning: operator overloading can only be used on methods
lib/bait/checker/tests/op_overload.in.bt:9:9 error: "+" was overloaded twice for type "Foo"
